Finished Home Page. #Bug: footer is still visible when oppening the menu slider

--- a/src/home-page-style.css
+++ b/src/home-page-style.css
@@ -10,6 +10,34 @@
     --wb-lighter-second-color: #F22E76;
 }
 
+.table-wrapper {
+    display: grid;
+    grid-template-rows: repeat(auto-fit, 1fr);
+    gap: 15px;
+    border: 5px solid var(--wb-second-color);
+    border-radius: 30px;
+    padding: 25px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.wb-location {
+    display: flex;
+    border: 5px solid var(--wb-main-color);
+    border-radius: 30px;
+    padding: 50px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+    cursor: pointer;
+    transition: all .15s linear;
+}
+
+.wb-location span:hover {
+    color: var(--wb-lighter-main-color);
+    transition: all .15s linear;
+}
 
 @media screen and (min-width: 1436px) {
     .home-content {
@@ -25,6 +53,8 @@
         align-items: flex-start;
         justify-content: end;
     }
+
+    
 }
 
 @media screen and (max-width: 1435px) {
@@ -41,10 +71,12 @@
         align-items: flex-start;
         justify-content: end;
     }
+
+   
 }
 
 @media screen and (min-width: 951px) {
-    .wb-introduction h3 {
+    .home-content h3 {
         font-family: 'Roboto', sans-serif;
         font-weight: bold;
         font-size: 2vw;
@@ -55,10 +87,16 @@
         font-size: 1.5vw;
         font-weight: 500;
     }
+
+    .table-wrapper span, .wb-location span {
+        font-family: 'Roboto', sans-serif;
+        font-size: 1.6vw;
+        font-weight: 500;
+    }
 }
 
 @media screen and (max-width: 950px) {
-    .wb-introduction h3 {
+    .home-content h3 {
         font-family: 'Roboto', sans-serif;
         font-weight: bold;
         font-size: 3vw;
@@ -69,10 +107,16 @@
         font-size: 2.5vw;
         font-weight: 500;
     }
+
+    .table-wrapper span, .wb-location span {
+        font-family: 'Roboto', sans-serif;
+        font-size: 2.8vw;
+        font-weight: 500;
+    }
 }
 
 @media screen and (max-width: 600px) {
-    .wb-introduction h3 {
+    .home-content h3 {
         font-family: 'Roboto', sans-serif;
         font-weight: bold;
         font-size: 4vh;
@@ -81,6 +125,12 @@
     .wb-introduction span {
         font-family: 'Roboto', sans-serif;
         font-size: 2vh;
+        font-weight: 500;
+    }
+
+    .table-wrapper span, .wb-location span {
+        font-family: 'Roboto', sans-serif;
+        font-size: 2.3vh;
         font-weight: 500;
     }
 }
