--- a/src/navbar-style.css
+++ b/src/navbar-style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root { 
     --wb-main-color: #809BBF;
@@ -13,12 +13,13 @@
 * {
     padding: 0;
     margin: 0;
-    overflow-x: hidden;
 }
 
 body {
     background: var(--wb-light-tone);
     z-index: 0;
+    overflow-y: scroll;
+    overflow-x: hidden; 
 }
 
 .header-wave {
@@ -26,6 +27,32 @@ body {
     z-index: -10;
     margin-bottom: -12%;
 }
+
+footer {
+    z-index: -10;
+    margin-top: 20%;
+    background: var(--wb-main-color);
+    display: grid;
+    grid-template-columns: repeat(2, 10%);
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+    padding: 25px;
+}
+
+.credits {
+    display: flex;
+    gap: 5px;
+    font-size: 1.15vw;
+    transition: all .15s linear;
+    cursor: pointer;
+}
+
+.credits:hover {
+    color: var(--wb-lighter-second-color);
+    transition: all .15s linear;
+}
+
 /* DEFAULT SCREEN STYLE */
 @media screen and (min-width: 1436px) {
     header {
@@ -50,6 +77,7 @@ body {
         text-decoration: underline wavy;
         overflow-x: visible;
         color: white;
+        text-shadow: 3px 3px var(--wb-second-color);
     }
 
     #close-menu, .mobile-icon {
@@ -88,13 +116,12 @@ body {
     #content { 
         display: grid;
         grid-template-rows: repeat(auto-fit, 1fr);
-        gap: 25px;
+        gap: 20%;
         width: 80%;
         margin-left: auto;
         margin-right: auto;
     }
 }
-
 /* MOBILE SCREEN STYLE */
 @media screen and (max-width: 1435px) {
     header {
@@ -103,6 +130,10 @@ body {
         background: var(--wb-main-color);
         display: flex;
         justify-content: center;
+    }
+
+    .header-wave {
+        margin-top: -.6px;
     }
 
     .wb-title {
@@ -118,6 +149,7 @@ body {
         height: 0;
         background: var(--wb-main-color);
         transition: .25s linear;
+        overflow: hidden;
     }
 
     nav .nav-button {
@@ -152,6 +184,7 @@ body {
         font-weight: bold;
         justify-self: start;
         text-decoration: underline wavy;
+        text-shadow: 3px 3px var(--wb-second-color);
     }
 
     #menu-slide {
@@ -188,7 +221,14 @@ body {
         margin-right: auto;
     }
 }
-
+@media screen and (max-width: 1000px) {
+    footer {
+        gap: 80px;
+    }
+    .credits {
+        font-size: 1.8vh;
+    }
+}
 @media screen and (max-width: 600px) {
     .mobile-header span {
         font-size: 3vh;
@@ -197,5 +237,9 @@ body {
         font-weight: bold;
         justify-self: start;
         text-decoration: underline wavy;
+    }
+
+    footer {
+        display: none;
     }
 }
